--- a/page_/styles.css
+++ b/page_/styles.css
@@ -314,7 +314,7 @@ button:hover {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 480px) and (max-width: 600px) {
     .div_general{
         max-width: 400px;
         transform: translateX(50px);
@@ -332,7 +332,7 @@ button:hover {
     }
 
     #cambiar-tema{
-        transform: translateX(-60px);
+        transform: translateX(10px);
     }
 
     .div_avatar{
