--- a/page_/styles.css
+++ b/page_/styles.css
@@ -195,20 +195,25 @@ body.tema-oscuro::-webkit-scrollbar-thumb {
     transform: translateY(100px);
 }
 
-.p1{
+
+#video-container {
     position: relative;
-    transform: translateX(-3%);
     width: 50%;
     max-width: 50%;
-    height: auto;
-    border-radius:10px;
+    border-radius: 10px;
+    overflow: hidden;
     display: block;
-    box-shadow: 4px 4px 10px #121a2efa; /* Puedes ajustar la sombra según tus preferencias */
-    transition: box-shadow 0.3s ease, transform 0.3s ease; /* Agrega una transición para la sombra y el tamaño */
+    box-shadow: 4px 4px 10px #121a2efa;
+    transition: box-shadow 0.3s ease;
 }
 
-.p1:hover {
-    transform: scale(1.05); 
+#video-proyect1 {
+    width: 100%;
+    height: auto;
+}
+
+#video-container:hover {
+    box-shadow: 8px 8px 20px #121a2efa;
 }
 
 .proyect1_info{
@@ -220,6 +225,10 @@ body.tema-oscuro::-webkit-scrollbar-thumb {
 .proyect1_info p{
     position: relative;
     z-index: 2;
+}
+
+.p1{
+    display: flex;
 }
 
 
@@ -439,7 +448,7 @@ button:hover {
         transform: translateX(10px);
     }
     .div_nick{
-        transform: translateY(100px) translateX(-55px);
+        transform: translateY(100px) translateX(-35px);
     }
 
     .div_barra{
@@ -542,6 +551,19 @@ button:hover {
         transform: translateY(0%) translateX(135px);
     }
 
+    #video-container{
+        width: 100%;
+        max-width: 100%;
+        box-shadow: 4px 4px 10px #121a2efa;
+
+    }
+
+    #video-proyect1 {
+        width: 100%;
+        max-width: 100%;
+        height: 90%;
+    }
+
     }   
     
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
@@ -553,6 +575,8 @@ button:hover {
     #cambiar-tema{
         transform: translateX(-150px);
     }
+
+    
 
     .div_general{
         max-width: 600px;
