--- a/page_/styles.css
+++ b/page_/styles.css
@@ -571,27 +571,20 @@ button:hover {
 @media only screen and (min-width: 0px) and (max-width:  576px) {
 
     .div_general{
-        width: 315px;
+        width: auto;
         max-width: 405px;
-        align-items: center;
-        padding: 0px;
-    }
-    .TODO{
-        width: 315px;
-        max-width: 405px;
-        padding-left: 4px;
-    }
+        }
     
     .div_barra{
-        width: 315px;
-        max-width: 315px;
+        width: auto;
+        max-width: auto;
         padding: 0;
         transform: translateX(0);
     }
     
     #cambiar-tema{
         padding-top: 20px;
-        transform: translateX(30px);
+        
     }
 
     .div_nick{
@@ -705,11 +698,17 @@ button:hover {
         transform: translateX(0px);
     }
     
+    .div_barra{
+        width: 600px;
+        max-width: auto;
+        position: relative;
+        
+    }
 
     .div_general{
         max-width: 600px;
-        position: relative;
-        text-align: left;
+        position: none;
+      
     }
     }
     
